fix(reset): add text-align left to button reset to prevent centered text in button containers

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -31,6 +31,7 @@ button {
   border: none;
   cursor: pointer;
   padding: 0;
+  text-align: left;
 }
 
 input::-ms-reveal,
